Quick fix and improve debt